--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
   "version": "1.0.0",
   "description": "reference material for the js pm webpack",
   "main": "index.js",
-  "scripts": {
+  "scripts": 
+  {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
+  "repository": 
+  {
     "type": "git",
     "url": "git+https://github.com/jfcameron/webpack-reference.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
+  "bugs": 
+  {
     "url": "https://github.com/jfcameron/webpack-reference/issues"
   },
   "homepage": "https://github.com/jfcameron/webpack-reference#readme",
-  "devDependencies": {
+  "devDependencies": 
+  {
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0"
   },
-  "dependencies": {
+  "dependencies": 
+  {
     "lodash": "^4.17.4"
   }
 }
