--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": 
   {
     "build": "webpack",
+    "something": "echo 'hello'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": 
